# Med-Council

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  README.md  app.py  council.py  council_registry.py  council_schemas.py  council_tools.py  docker-compose.yml  frontend.html  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt
.github/: CODEOWNERS  PIPELINES.md  dependabot.yml
.github/workflows/: _deploy-gcp.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  destroy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  attachments.py  auth.py  consultation_memory.py  council.py  council_handoffs.py  council_registry.py  council_schemas.py  council_tools.py  db.py  docker-entrypoint.sh  embeddings.py  escalation.py  langfuse_tracing.py  main.py  output_guardrails.py  pyproject.toml  rate_limit.py  requirements.txt  speech.py  storage.py  test_consultation_memory.py  test_langfuse_tracing.py  vector_store.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_consultation_case_state.py
apps/api/scripts/: get_env.sh  migrate_sqlite_to_postgres.py  sync-secrets.sh
apps/api/tests/: test_consultation_memory.py  test_input_guardrails.py  test_langfuse_tracing.py  test_output_guardrails.py
apps/web/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
static/: index.html
terraform/: .gitignore  README.md  imports.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/env/: dev.tfvars  prod.tfvars
(+27 files in other folders)
